--- a/DockerFile
+++ b/DockerFile
@@ -1,13 +1,16 @@
 FROM node:18
 
+# Install Java
+RUN apt-get update && apt-get install -y openjdk-17-jdk
+
+# Set working dir
 WORKDIR /app
 
-COPY package*.json ./
-RUN npm install
-
+# Copy code
 COPY . .
 
-RUN apt update && apt install -y docker.io
+# Install dependencies
+RUN npm install
 
 EXPOSE 3000
-CMD [ "npm", "start" ]
+CMD ["node", "server.js"]
